// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Description list Default renders correctly 1`] = `
<dl
  class="ecl-description-list"
>
  <dt
    class="ecl-description-list__term"
  >
    European Commission
  </dt>
  <dd
    class="ecl-description-list__definition"
  >
    The executive body of the European Union formed in 1967, which initiates action in the EU and mediates between member governments. Former name (until 1993): Commission of the European Communities
  </dd>
  <dt
    class="ecl-description-list__term"
  >
    European Union
  </dt>
  <dt
    class="ecl-description-list__term"
  >
    EU
  </dt>
  <dd
    class="ecl-description-list__definition"
  >
    An association of European nations formed in 1993 for the purpose of achieving political and economic integration.
  </dd>
  <dt
    class="ecl-description-list__term"
  >
    Citizen
  </dt>
  <dd
    class="ecl-description-list__definition"
  >
    A native or naturalized member of a state or nation who owes allegiance to its government and is entitled to its protection
  </dd>
  <dd
    class="ecl-description-list__definition"
  >
    An inhabitant of a city or town, especially one entitled to its privileges or franchises.
  </dd>
</dl>
`;

exports[`Description list Default renders correctly in the horizontal variant 1`] = `
<dl
  class="ecl-description-list ecl-description-list--horizontal"
>
  <dt
    class="ecl-description-list__term"
  >
    European Commission
  </dt>
  <dd
    class="ecl-description-list__definition"
  >
    The executive body of the European Union formed in 1967, which initiates action in the EU and mediates between member governments. Former name (until 1993): Commission of the European Communities
  </dd>
  <dt
    class="ecl-description-list__term"
  >
    European Union
  </dt>
  <dd
    class="ecl-description-list__definition"
  >
    An association of European nations formed in 1993 for the purpose of achieving political and economic integration.
  </dd>
  <dt
    class="ecl-description-list__term"
  >
    Citizen
  </dt>
  <dd
    class="ecl-description-list__definition"
  >
    A native or naturalized member of a state or nation who owes allegiance to its government and is entitled to its protection
  </dd>
</dl>
`;

exports[`Description list Default renders correctly in the taxonomy variant 1`] = `
<dl
  class="ecl-description-list ecl-description-list--taxonomy"
>
  <dt
    class="ecl-description-list__term"
  >
    Science areas
  </dt>
  <dd
    class="ecl-description-list__definition"
  >
    <span
      class="ecl-tag ecl-tag--display ecl-description-list__tag"
    >
      Energy and transport
    </span>
    <span
      class="ecl-tag ecl-tag--display ecl-description-list__tag"
    >
      Standards
    </span>
  </dd>
  <dt
    class="ecl-description-list__term"
  >
    Keywords
  </dt>
  <dd
    class="ecl-description-list__definition"
  >
    <span
      class="ecl-tag ecl-tag--display ecl-description-list__tag"
    >
      Electricity
    </span>
    <span
      class="ecl-tag ecl-tag--display ecl-description-list__tag"
    >
      Electromobility
    </span>
    <span
      class="ecl-tag ecl-tag--display ecl-description-list__tag"
    >
      Energy
    </span>
    <span
      class="ecl-tag ecl-tag--display ecl-description-list__tag"
    >
      Energy storage
    </span>
    <span
      class="ecl-tag ecl-tag--display ecl-description-list__tag"
    >
      Security
    </span>
    <span
      class="ecl-tag ecl-tag--display ecl-description-list__tag"
    >
      Transport
    </span>
    <span
      class="ecl-tag ecl-tag--display ecl-description-list__tag"
    >
      Low carbon
    </span>
  </dd>
</dl>
`;

exports[`Description list Default renders correctly with extra attributes 1`] = `
<dl
  class="ecl-description-list"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <dt
    class="ecl-description-list__term"
  >
    European Commission
  </dt>
  <dd
    class="ecl-description-list__definition"
  >
    The executive body of the European Union formed in 1967, which initiates action in the EU and mediates between member governments. Former name (until 1993): Commission of the European Communities
  </dd>
  <dt
    class="ecl-description-list__term"
  >
    European Union
  </dt>
  <dt
    class="ecl-description-list__term"
  >
    EU
  </dt>
  <dd
    class="ecl-description-list__definition"
  >
    An association of European nations formed in 1993 for the purpose of achieving political and economic integration.
  </dd>
  <dt
    class="ecl-description-list__term"
  >
    Citizen
  </dt>
  <dd
    class="ecl-description-list__definition"
  >
    A native or naturalized member of a state or nation who owes allegiance to its government and is entitled to its protection
  </dd>
  <dd
    class="ecl-description-list__definition"
  >
    An inhabitant of a city or town, especially one entitled to its privileges or franchises.
  </dd>
</dl>
`;

exports[`Description list Default renders correctly with extra class names 1`] = `
<dl
  class="ecl-description-list custom-class custom-class--test"
>
  <dt
    class="ecl-description-list__term"
  >
    European Commission
  </dt>
  <dd
    class="ecl-description-list__definition"
  >
    The executive body of the European Union formed in 1967, which initiates action in the EU and mediates between member governments. Former name (until 1993): Commission of the European Communities
  </dd>
  <dt
    class="ecl-description-list__term"
  >
    European Union
  </dt>
  <dt
    class="ecl-description-list__term"
  >
    EU
  </dt>
  <dd
    class="ecl-description-list__definition"
  >
    An association of European nations formed in 1993 for the purpose of achieving political and economic integration.
  </dd>
  <dt
    class="ecl-description-list__term"
  >
    Citizen
  </dt>
  <dd
    class="ecl-description-list__definition"
  >
    A native or naturalized member of a state or nation who owes allegiance to its government and is entitled to its protection
  </dd>
  <dd
    class="ecl-description-list__definition"
  >
    An inhabitant of a city or town, especially one entitled to its privileges or franchises.
  </dd>
</dl>
`;
